Removed buggy form attachments till later date

--- a/contact.html
+++ b/contact.html
@@ -325,6 +325,7 @@
                   <form
                     method="post"
                     action="https://usebasin.com/f/daeebc900f67"
+                    accept-charset="UTF-8"
                     enctype="multipart/form-data"
                     id="contact-form"
                   >
@@ -370,25 +371,9 @@
                       </div>
 
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <label for="input_file" class="input_files">
-                          Attachment (Optional)
-                          <i class="flaticon-paperclip"></i>
-                        </label>
-                        <input
-                          class="input_files"
-                          id="input_file"
-                          type="file"
-                          name="file"
-                          value=""
-                          placeholder=""
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
                         <textarea
                           name="message"
-                          placeholder="Message*"
+                          placeholder="Message"
                         ></textarea>
                       </div>
 
