--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                  <form method="post" action="https://usebasin.com/f/daeebc900f67" enctype="multipart/form-data" id="contact-form">
+                  <form method="post" action="https://usebasin.com/f/daeebc900f67" accept-charset="UTF-8" enctype="multipart/form-data" id="contact-form">
                     <div class="row clearfix">
                       <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <input
@@ -737,25 +737,9 @@
                       </div>
 
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <label for="input_file" class="input_files">
-                          Attachment (Optional)
-                          <i class="flaticon-paperclip"></i>
-                        </label>
-                        <input
-                          class="input_files"
-                          id="input_file"
-                          type="file"
-                          name="file"
-                          value=""
-                          placeholder=""
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
                         <textarea
                           name="message"
-                          placeholder="Message*"
+                          placeholder="Message"
                         ></textarea>
                       </div>
 
