Added Chamber of Commerce badge

--- a/index.html
+++ b/index.html
@@ -646,6 +646,7 @@
                 <div class="text">Fairmont, WV</div>
               </div>
             </div>
+            <img src="images/resource/membership_recolored.jpg" class="membership-badge" alt="2021 Preston County Chamber of Commerce Membership Badge" />
           </div>
         </div>
       </section>
