Added new text content, graphics and Story page

--- a/contact.html
+++ b/contact.html
@@ -188,16 +188,10 @@
                       <li>
                         <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
-                      <!-- <li class="dropdown"> -->
                       <li>
-                        <a href="/#about"
-                          ><span data-hover="About">About</span></a
+                        <a href="our-story.html"
+                          ><span data-hover="Our&nbsp;Story">Our Story</span></a
                         >
-                        <!-- <ul>
-                          <li><a href="/#about">About Me</a></li>
-                          <li><a href="/#testimonials">Client Reviews</a></li>
-                          <li><a href="blog.html">Blog</a></li>
-                        </ul> -->
                       </li>
                       <li>
                         <a href="/#services"
@@ -213,14 +207,14 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact Me</span></a
+                      ><span class="txt">Contact Us</span></a
                     >
                   </div>
                   <!-- Social Box -->
                   <div class="social-box">
                     <a
                       target="_blank"
-                      href="https://www.facebook.com/lschaffer17"
+                      href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                       class="fab fa-facebook-f"
                     ></a>
                     <!-- <a
@@ -287,18 +281,19 @@
             <div class="title-column col-lg-5 col-md-12 cols-m-12">
               <div class="inner-column">
                 <div class="sec-title">
-                  <h2>Contact Me</h2>
+                  <h2>Contact Us</h2>
                 </div>
                 <ul class="contact-list">
                   <li>
-                    <a href="#"
-                      ><span class="icon flaticon-skype"></span> Lauren
+                    <a
+                      href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
+                      ><span class="icon flaticon-linkedin"></span> Lauren
                       Todesko</a
                     >
                   </li>
                   <li>
                     <a href="tel:+1-304-692-6223"
-                      ><span class="icon flaticon-whatsapp"></span>(304)
+                      ><span class="icon flaticon-phone-call"></span>(304)
                       692-6223</a
                     >
                   </li>
@@ -505,14 +500,9 @@
                 <div class="social-box">
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/lschaffer17"
+                    href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                     class="fab fa-facebook-f"
                   ></a>
-                  <!-- <a
-                    target="_blank"
-                    href="http://twitter.com/"
-                    class="fab fa-twitter"
-                  ></a> -->
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -550,7 +540,14 @@
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
                 <div class="copyright">
-                  Handcrafted by KJ Magill &copy; 2021.
+                  Handcrafted by
+                  <a
+                    class="dec-none"
+                    href="https://www.kjmagill.com"
+                    target="blank_"
+                    >KJ Magill</a
+                  >
+                  &copy; 2021.
                 </div>
               </div>
             </div>
