--- a/error.html
+++ b/error.html
@@ -96,7 +96,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://www.todeskobookkeeping.com/error-page.html"
+      content="https://www.todeskobookkeeping.com/error.html"
     />
     <meta
       property="og:title"
@@ -139,7 +139,7 @@
       <!-- Main Header-->
       <header class="main-header header-style-two">
         <!-- Header Upper -->
-        <div class="header-upper blue-bg">
+        <div class="header-upper">
           <div class="auto-container">
             <div class="inner-container clearfix">
               <!-- Logo Box -->
@@ -147,7 +147,7 @@
                 <div class="logo">
                   <a href="/"
                     ><img
-                      src="images/logo.png"
+                      src="images/logo_dark.png"
                       alt="Lauren Todesko Bookkeeping, LLC"
                       title="Logo"
                   /></a>
@@ -188,16 +188,10 @@
                       <li>
                         <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
-                      <!-- <li class="dropdown"> -->
                       <li>
-                        <a href="/#about"
-                          ><span data-hover="About">About</span></a
+                        <a href="our-story.html"
+                          ><span data-hover="Our&nbsp;Story">Our Story</span></a
                         >
-                        <!-- <ul>
-                          <li><a href="/#about">About Me</a></li>
-                          <li><a href="/#testimonials">Client Reviews</a></li>
-                          <li><a href="blog.html">Blog</a></li>
-                        </ul> -->
                       </li>
                       <li>
                         <a href="/#services"
@@ -213,21 +207,16 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact Me</span></a
+                      ><span class="txt">Contact Us</span></a
                     >
                   </div>
                   <!-- Social Box -->
                   <div class="social-box">
                     <a
                       target="_blank"
-                      href="https://www.facebook.com/lschaffer17"
+                      href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                       class="fab fa-facebook-f"
                     ></a>
-                    <!-- <a
-                      target="_blank"
-                      href="http://twitter.com/"
-                      class="fab fa-twitter"
-                    ></a> -->
                     <a
                       target="_blank"
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -272,7 +261,11 @@
       <section class="error-section">
         <div class="auto-container">
           <div class="image">
-            <img src="images/resource/error.png" alt="error graphic" />
+            <img
+              class="error-img"
+              src="images/resource/error.png"
+              alt="error graphic"
+            />
           </div>
           <h3>Sorry... page not found!</h3>
 
@@ -314,14 +307,9 @@
                 <div class="social-box">
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/lschaffer17"
+                    href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                     class="fab fa-facebook-f"
                   ></a>
-                  <!-- <a
-                    target="_blank"
-                    href="http://twitter.com/"
-                    class="fab fa-twitter"
-                  ></a> -->
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -359,7 +347,14 @@
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
                 <div class="copyright">
-                  Handcrafted by KJ Magill &copy; 2021.
+                  Handcrafted by
+                  <a
+                    class="dec-none"
+                    href="https://www.kjmagill.com"
+                    target="blank_"
+                    >KJ Magill</a
+                  >
+                  &copy; 2021.
                 </div>
               </div>
             </div>
