--- a/our-story.html
+++ b/our-story.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Lauren Todesko Bookkeeping, LLC | Support</title>
+    <title>Lauren Todesko Bookkeeping, LLC | Our Story</title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -96,15 +96,15 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://www.todeskobookkeeping.com/support.html"
+      content="https://www.todeskobookkeeping.com/our-story.html"
     />
     <meta
       property="og:title"
-      content="Lauren Todesko Bookkeeping, LLC | Support Form"
+      content="Lauren Todesko Bookkeeping, LLC | Our Story"
     />
     <meta
       property="og:description"
-      content="We pride ourselves on the very best customer service."
+      content="The real story behind Lauren Todesko Bookkeeping, LLC."
     />
 
     <!-- Stylesheets -->
@@ -188,8 +188,8 @@
                       <li>
                         <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
-                      <li>
-                        <a href="our-story.html"
+                      <li class="current">
+                        <a href="#"
                           ><span data-hover="Our&nbsp;Story">Our Story</span></a
                         >
                       </li>
@@ -217,6 +217,11 @@
                       href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                       class="fab fa-facebook-f"
                     ></a>
+                    <!-- <a
+                      target="_blank"
+                      href="http://twitter.com/"
+                      class="fab fa-twitter"
+                    ></a> -->
                     <a
                       target="_blank"
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -260,12 +265,8 @@
       <!-- Page Title -->
       <section
         class="page-title style-two"
-        style="background-image: url(images/resource/contact_header.png)"
-      >
-        <div class="auto-container">
-          <h1>Help &amp; Support</h1>
-        </div>
-      </section>
+        style="background-image: url(images/resource/family.jpg)"
+      ></section>
       <!-- End Page Title -->
 
       <!-- Talk Section -->
@@ -276,13 +277,13 @@
             <div class="title-column col-lg-5 col-md-12 cols-m-12">
               <div class="inner-column">
                 <div class="sec-title">
-                  <h2>Contact Us</h2>
+                  <h2>Our Story</h2>
                 </div>
                 <ul class="contact-list">
                   <li>
                     <a
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
-                      ><span class="icon flaticon-linkedin"></span> Lauren
+                      ><span class="icon flaticon-linkedin"></span>Lauren
                       Todesko</a
                     >
                   </li>
@@ -306,123 +307,41 @@
             <div class="form-column col-lg-7 col-md-12 cols-m-12">
               <div class="inner-column">
                 <div class="column-text">
-                  Having issues? I'm here to help! <br />
-                  Fill out the form below and I'll get back to you ASAP!
+                  Trading the densely populated Garden State for the rugged
+                  beauty of the Mountain State has been a childhood goal of our
+                  founder, Lauren Todesko. One might argue that pizza and bagels
+                  can't compete with pepperoni rolls, but it is more than
+                  Mountaineer food that brought her here.
+                  <br /><br />
+                  She grew up in Villas, New Jersey, right at the Delaware Bay.
+                  But Lauren early ventured into our hills: Her grandparents
+                  bought six acres in Lenox, Preston County, and built a
+                  vacation home on the property. Returning Summer after Summer
+                  and most school vacations in-between, she grew her first roots
+                  in West Virginia. For a while, though, she yet had to love the
+                  Mountain State from afar. Her education brought her to
+                  Pennsylvania, but it didn't feel like home. Lauren applied to
+                  West Virginia University and was accepted.
+                  <br /><br />
+                  While studying in Morgantown, her family also moved to the
+                  State, officially making it home for the whole family. On a
+                  transfer to Fairmont University later, our founder met her
+                  husband. As they graduated, they began their life together in
+                  Kingwood, returning her to Preston County, where they now live
+                  with their two children. Not only did the Todesko family found
+                  there its professional home, but the home to stay - even
+                  Lauren's grandparents moved to our State, at last.
+                  <br /><br />
+                  Why do we share this story? The strength of family bonds and
+                  her family values run deep with our founder and build a strong
+                  foundation of trust. Her love for our State, the passion for
+                  business, and the desire to serve fellow small business owners
+                  are the building blocks of our business relationships.
+                  <br /><br />
+                  Reach out to Lauren, and you will find that you can trust her
+                  with your books and your company. Let's begin your journey
+                  together!
                 </div>
-
-                <!-- Contact Form -->
-                <div class="contact-form">
-                  <form
-                    method="post"
-                    action="https://usebasin.com/f/daeebc900f67"
-                    accept-charset="UTF-8"
-                    enctype="multipart/form-data"
-                    id="contact-form"
-                  >
-                    <div class="row clearfix">
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="firstname"
-                          value=""
-                          placeholder="First Name"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="lastname"
-                          value=""
-                          placeholder="Last Name"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="email"
-                          name="email"
-                          value=""
-                          placeholder="Email"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="company"
-                          value=""
-                          placeholder="Company"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <textarea
-                          name="message"
-                          placeholder="Message"
-                        ></textarea>
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <h4>How can I help you?</h4>
-
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-1"
-                            class="d-none"
-                          />
-                          <label for="subject-1" class="subjects">
-                            <span>I need help with my company billings.</span>
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-2"
-                            class="d-none"
-                          />
-                          <label for="subject-2" class="subjects">
-                            <span
-                              >I found an issue or a bug on your website.</span
-                            >
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-3"
-                            class="d-none"
-                          />
-                          <label for="subject-3" class="subjects">
-                            <span>I'm looking to hire an accountant.</span>
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-4"
-                            class="d-none"
-                          />
-                          <label for="subject-4" class="subjects">
-                            <span>Something else.</span>
-                          </label>
-                        </span>
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <button type="submit" class="theme-btn btn-style-two">
-                          <span class="txt">Submit</span>
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <!--End Contact Form-->
                 <div
                   class="pattern-layer"
                   style="background-image: url(images/icons/arrow-pattern.png)"
@@ -500,11 +419,6 @@
                     href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                     class="fab fa-facebook-f"
                   ></a>
-                  <!-- <a
-                    target="_blank"
-                    href="http://twitter.com/"
-                    class="fab fa-twitter"
-                  ></a> -->
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
