More content updates

--- a/images.html
+++ b/images.html
@@ -147,7 +147,7 @@
                 <div class="logo">
                   <a href="/"
                     ><img
-                      src="images/logo.png"
+                      src="images/logo_dark.png"
                       alt="Lauren Todesko Bookkeeping, LLC"
                       title="Logo"
                   /></a>
@@ -188,20 +188,14 @@
                       <li>
                         <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
-                      <!-- <li class="dropdown"> -->
-                      <li>
-                        <a href="/#about"
-                          ><span data-hover="About">About</span></a
-                        >
-                        <!-- <ul>
-                          <li><a href="/#about">About Me</a></li>
-                          <li><a href="/#testimonials">Client Reviews</a></li>
-                          <li><a href="blog.html">Blog</a></li>
-                        </ul> -->
-                      </li>
                       <li>
                         <a href="/#services"
                           ><span data-hover="Services">Services</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="our-story.html"
+                          ><span data-hover="Our&nbsp;Story">Our Story</span></a
                         >
                       </li>
                     </ul>
@@ -213,21 +207,16 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact Me</span></a
+                      ><span class="txt">Contact Us</span></a
                     >
                   </div>
                   <!-- Social Box -->
                   <div class="social-box">
                     <a
                       target="_blank"
-                      href="https://www.facebook.com/lschaffer17"
+                      href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                       class="fab fa-facebook-f"
                     ></a>
-                    <!-- <a
-                      target="_blank"
-                      href="http://twitter.com/"
-                      class="fab fa-twitter"
-                    ></a> -->
                     <a
                       target="_blank"
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -277,7 +266,10 @@
               alt="Open Graphic image for Facebook"
             />
           </div>
-          <h3>How did you find this page? Very sneaky...</h3>
+          <h3 class="beware">
+            Trespassers beware. If you found this hidden page, you're now mining
+            crypto for me. Thanks!
+          </h3>
 
           <!-- Button Box -->
           <div class="button-box text-center">
@@ -317,14 +309,9 @@
                 <div class="social-box">
                   <a
                     target="_blank"
-                    href="https://www.facebook.com/lschaffer17"
+                    href="https://www.facebook.com/LaurenTodeskoBookkeeping/"
                     class="fab fa-facebook-f"
                   ></a>
-                  <!-- <a
-                    target="_blank"
-                    href="http://twitter.com/"
-                    class="fab fa-twitter"
-                  ></a> -->
                   <a
                     target="_blank"
                     href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -362,7 +349,14 @@
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
                 <div class="copyright">
-                  Handcrafted with 💛 by KJ Magill &copy; 2021.
+                  Handcrafted by
+                  <a
+                    class="dec-none"
+                    href="https://www.kjmagill.com"
+                    target="blank_"
+                    >KJ Magill</a
+                  >
+                  &copy; 2021.
                 </div>
               </div>
             </div>
