added qualifications section and some small tweaks

--- a/contact.html
+++ b/contact.html
@@ -285,6 +285,26 @@
                 </div>
                 <ul class="contact-list">
                   <li>
+                    <!-- Calendly link widget begin -->
+                    <link
+                      href="https://assets.calendly.com/assets/external/widget.css"
+                      rel="stylesheet"
+                    />
+                    <script
+                      src="https://assets.calendly.com/assets/external/widget.js"
+                      type="text/javascript"
+                      async
+                    ></script>
+                    <a
+                      href=""
+                      onclick="Calendly.initPopupWidget({url: 'https://calendly.com/todeskobookkeeping/15min'});return false;"
+                    >
+                      <span class="icon flaticon-calendar"></span>
+                      Schedule time with us
+                    </a>
+                    <!-- Calendly link widget end -->
+                  </li>
+                  <li>
                     <a
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                       ><span class="icon flaticon-linkedin"></span> Lauren
@@ -454,7 +474,7 @@
             </div>
             <h1>Ready to Get Started?</h1>
             <div class="text">
-              Call or email me today to take your first step towards peace of
+              Call or email us today to take your first step towards peace of
               mind.
             </div>
             <div class="btns-box">
@@ -484,16 +504,31 @@
                   your business <br />
                   today!
                 </h2>
-                <a href="contact.html" class="theme-btn btn-style-two"
-                  ><span class="txt">Schedule a Discussion</span></a
+                <!-- Calendly link widget begin -->
+                <link
+                  href="https://assets.calendly.com/assets/external/widget.css"
+                  rel="stylesheet"
+                />
+                <script
+                  src="https://assets.calendly.com/assets/external/widget.js"
+                  type="text/javascript"
+                  async
+                ></script>
+                <a
+                  href=""
+                  class="theme-btn btn-style-two"
+                  onclick="Calendly.initPopupWidget({url: 'https://calendly.com/todeskobookkeeping/15min'});return false;"
                 >
+                  <span class="txt">Schedule a Discussion</span>
+                </a>
+                <!-- Calendly link widget end -->
               </div>
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519 <br />
+                  Kingwood, WV 26537 <br />
                   <a href="tel:+1-304-692-6223">+1-304-692-6223</a>
                 </div>
                 <!-- Social Box -->
