--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                           ><span class="txt">Services</span></a
                         >
                         <a
-                          href="qualifications.html"
+                          href="#qualifications"
                           class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">Qualifications</span></a
                         >
@@ -324,7 +324,7 @@
                           ><span class="txt">Services</span></a
                         >
                         <a
-                          href="qualifications.html"
+                          href="#qualifications"
                           class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">Qualifications</span></a
                         >
@@ -366,7 +366,7 @@
                           ><span class="txt">Services</span></a
                         >
                         <a
-                          href="qualifications.html"
+                          href="#qualifications"
                           class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">Qualifications</span></a
                         >
@@ -460,7 +460,6 @@
                 <div class="sec-title">
                   <h2>Services</h2>
                 </div>
-
                 <div class="row clearfix">
                   <!-- Service Block -->
                   <div class="service-block col-lg-6 col-md-6 col-sm-12">
@@ -545,6 +544,72 @@
       </section>
       <!-- End Services Section -->
 
+      <!-- Qualifications Section -->
+      <section id="qualifications" class="qualifications-section">
+        <div class="auto-container">
+          <div class="row clearfix">
+            <!-- Content Column -->
+            <div class="content-column col-md-12 col-sm-12">
+              <div class="inner-column">
+                <div class="sec-title">
+                  <h2>Qualifications</h2>
+                </div>
+                <div class="row clearfix">
+                  <div class="qualifications-block col-lg-6 col-md-6 col-sm-12">
+                    <div class="inner-box">
+                      <div class="text">
+                        Over the last eight years, I've worked in various roles
+                        in the bookkeeping and accounting sectors. As an alumnus
+                        of Grand Canyon University and Fairmont State
+                        University, I have put my knowledge in accounting,
+                        business administration, and human resources management
+                        to benefit employers and their customers. In 2020 I
+                        decided to use these skills as an entrepreneur, founding
+                        Lauren Todesko Bookkeeping, LLC. Please connect with me
+                        on
+                        <a
+                          href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
+                          target="blank_"
+                          class="qual-text"
+                          >LinkedIn</a
+                        >
+                        to learn about my education, skillset, and pro-bono
+                        involvement.
+                        <br /><br />
+                        With a certification in
+                        <em>QuickBooks™</em> installation, configuration, and
+                        use, I am ready to take your company into the 21st
+                        Century. The online platform scales with your business,
+                        from work-from-home solopreneur to multi-state
+                        corporation. Let us accompany you on your journey!
+                      </div>
+                    </div>
+                  </div>
+                  <div class="qualifications-block col-lg-6 col-md-6 col-sm-12">
+                    <div class="inner-box qual-col-2">
+                      <center>
+                        <img
+                          src="images/resource/qualifications.png"
+                          alt="Qualifications icon"
+                          class="qual-icon"
+                        />
+                        <br />
+                        <img
+                          src="images/resource/membership_recolored.jpg"
+                          alt="Preston County Chamber of Commerce 2021 Membership Badge"
+                          class="chamber-badge"
+                        />
+                      </center>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Qualifications Section -->
+
       <!-- Talk Section -->
       <section id="call-us" class="talk-section">
         <div class="auto-container">
@@ -556,6 +621,26 @@
                   <h2>Let’s Talk</h2>
                 </div>
                 <ul class="contact-list">
+                  <li>
+                    <!-- Calendly link widget begin -->
+                    <link
+                      href="https://assets.calendly.com/assets/external/widget.css"
+                      rel="stylesheet"
+                    />
+                    <script
+                      src="https://assets.calendly.com/assets/external/widget.js"
+                      type="text/javascript"
+                      async
+                    ></script>
+                    <a
+                      href=""
+                      onclick="Calendly.initPopupWidget({url: 'https://calendly.com/todeskobookkeeping/15min'});return false;"
+                    >
+                      <span class="icon flaticon-calendar"></span>
+                      Schedule time with us
+                    </a>
+                    <!-- Calendly link widget end -->
+                  </li>
                   <li>
                     <a
                       href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
@@ -684,7 +769,7 @@
             </div>
             <h1>Ready to Get Started?</h1>
             <div class="text">
-              Call or email me today to take your first step towards peace of
+              Call or email us today to take your first step towards peace of
               mind.
             </div>
             <div class="btns-box">
@@ -714,16 +799,31 @@
                   your business <br />
                   today!
                 </h2>
-                <a href="contact.html" class="theme-btn btn-style-two"
-                  ><span class="txt">Schedule a Discussion</span></a
+                <!-- Calendly link widget begin -->
+                <link
+                  href="https://assets.calendly.com/assets/external/widget.css"
+                  rel="stylesheet"
+                />
+                <script
+                  src="https://assets.calendly.com/assets/external/widget.js"
+                  type="text/javascript"
+                  async
+                ></script>
+                <a
+                  href=""
+                  class="theme-btn btn-style-two"
+                  onclick="Calendly.initPopupWidget({url: 'https://calendly.com/todeskobookkeeping/15min'});return false;"
                 >
+                  <span class="txt">Schedule an Intro Call</span>
+                </a>
+                <!-- Calendly link widget end -->
               </div>
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519 <br />
+                  Kingwood, WV 26537 <br />
                   <a href="tel:+1-304-692-6223">+1-304-692-6223</a>
                 </div>
                 <!-- Social Box -->
