--- a/error.html
+++ b/error.html
@@ -292,16 +292,31 @@
                   your business <br />
                   today!
                 </h2>
-                <a href="contact.html" class="theme-btn btn-style-two"
-                  ><span class="txt">Schedule a Discussion</span></a
+                <!-- Calendly link widget begin -->
+                <link
+                  href="https://assets.calendly.com/assets/external/widget.css"
+                  rel="stylesheet"
+                />
+                <script
+                  src="https://assets.calendly.com/assets/external/widget.js"
+                  type="text/javascript"
+                  async
+                ></script>
+                <a
+                  href=""
+                  class="theme-btn btn-style-two"
+                  onclick="Calendly.initPopupWidget({url: 'https://calendly.com/todeskobookkeeping/15min'});return false;"
                 >
+                  <span class="txt">Schedule a Discussion</span>
+                </a>
+                <!-- Calendly link widget end -->
               </div>
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519
+                  Kingwood, WV 26537
                 </div>
                 <!-- Social Box -->
                 <div class="social-box">
