Fixed link to personal site

--- a/support.html
+++ b/support.html
@@ -580,7 +580,7 @@
                   Handcrafted by
                   <a
                     class="dec-none"
-                    href="https://www.kjmagill.com"
+                    href="https://kjmagill.com"
                     target="blank_"
                     >KJ Magill</a
                   >
