--- a/error.html
+++ b/error.html
@@ -365,7 +365,7 @@
                   Handcrafted by
                   <a
                     class="dec-none"
-                    href="https://www.kjmagill.com"
+                    href="https://kjmagill.com"
                     target="blank_"
                     >KJ Magill</a
                   >
