--- a/our-story.html
+++ b/our-story.html
@@ -494,7 +494,7 @@
                   Handcrafted by
                   <a
                     class="dec-none"
-                    href="https://www.kjmagill.com"
+                    href="https://kjmagill.com"
                     target="blank_"
                     >KJ Magill</a
                   >
