--- a/contact.html
+++ b/contact.html
@@ -337,13 +337,23 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
+                  <script>
+                    function onSubmit(token) {
+                    document.getElementById("invisible-recaptcha-form").submit();
+                    }
+                  </script>
+                  
                   <form
                     method="post"
                     action="https://usebasin.com/f/daeebc900f67"
                     accept-charset="UTF-8"
                     enctype="multipart/form-data"
-                    id="contact-form"
+                    id="contact-form invisible-recaptcha-form"
                   >
+                    <div
+                      class="g-recaptcha"
+                      data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"
+                    ></div>
                     <div class="row clearfix">
                       <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <input
@@ -438,8 +448,7 @@
                       </div>
 
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <button type="submit" class="theme-btn btn-style-two">
-                          <span class="txt">Submit</span>
+                        <button class="g-recaptcha theme-btn btn-style-two" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Submit</button>
                         </button>
                       </div>
                     </div>
