--- a/contact.html
+++ b/contact.html
@@ -339,10 +339,12 @@
                 <div class="contact-form">
                   <script>
                     function onSubmit(token) {
-                    document.getElementById("invisible-recaptcha-form").submit();
+                      document
+                        .getElementById('invisible-recaptcha-form')
+                        .submit();
                     }
                   </script>
-                  
+
                   <form
                     method="post"
                     action="https://usebasin.com/f/daeebc900f67"
@@ -448,7 +450,13 @@
                       </div>
 
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <button class="g-recaptcha theme-btn btn-style-two" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Submit</button>
+                        <button
+                          class="g-recaptcha theme-btn btn-style-two"
+                          data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"
+                          data-callback="onSubmit"
+                          data-badge="inline"
+                        >
+                          <span class="txt">Submit</span>
                         </button>
                       </div>
                     </div>
