--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <title>Lauren Todesko Bookkeeping, LLC | Contact Us</title>
 
+    <!-- Google recaptcha script -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <!-- Favicons, App Icons and Themes -->
     <link
       rel="apple-touch-icon"
@@ -337,25 +340,13 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                  <script>
-                    function onSubmit(token) {
-                      document
-                        .getElementById('invisible-recaptcha-form')
-                        .submit();
-                    }
-                  </script>
-
                   <form
                     method="post"
                     action="https://usebasin.com/f/daeebc900f67"
                     accept-charset="UTF-8"
                     enctype="multipart/form-data"
-                    id="contact-form invisible-recaptcha-form"
+                    id="contact-form"
                   >
-                    <div
-                      class="g-recaptcha"
-                      data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"
-                    ></div>
                     <div class="row clearfix">
                       <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <input
@@ -449,13 +440,13 @@
                         </span>
                       </div>
 
+                      <div
+                        class="g-recaptcha captcha"
+                        data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"
+                      ></div>
+
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <button
-                          class="g-recaptcha theme-btn btn-style-two"
-                          data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"
-                          data-callback="onSubmit"
-                          data-badge="inline"
-                        >
+                        <button type="submit" class="theme-btn btn-style-two">
                           <span class="txt">Submit</span>
                         </button>
                       </div>
